--- a/location.html
+++ b/location.html
@@ -9,9 +9,7 @@
 </head>
 <body class="location">
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script type="text/javascript" src="/js/demo.js ">
-    </script>
-    <div id="dvMap" style="width: 500px; height: 500px">
-    </div>
+    <script type="text/javascript" src="/js/demo.js "></script>
+    <div id="dvMap"></div>
 </body>
 </html>
