modify location code

--- a/location.html
+++ b/location.html
@@ -10,6 +10,6 @@
 <body class="location">
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript" src="/js/demo.js "></script>
-    <div id="dvMap"></div>
+    <div id="map-div"></div>
 </body>
 </html>
