--- a/register.html
+++ b/register.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <h1 id="register">Register</h1>
-
+    <div id="register-form">
     <canvas id="avatar-canvas"></canvas>
-    <form id="register-form">
+    <form>
         <label>Email</label>
         <input type="email" name="email" id="email" value=""/>
         <label>Password</label>
         <input type="password" name="Password" id="password" value=""/>
-        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3435.686243820927!2d31.016464963133892!3d30.558167495539642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8deb9008aefefc0!2zMzDCsDMzJzI4LjciTiAzMcKwMDEnMDAuMSJF!5e0!3m2!1sen!2seg!4v1671541502224!5m2!1sen!2seg" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <button type="button" id="get-location-btn">Get My Location</button>
         <button type="submit" id="register-btn">Register Now</button>
     </form>
+    </div>
+    
     <script src="/js/demo.js"></script> 
 </body>
 </html>
