--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
   </head>
   <body>
     <header>
-      <img src="/images/logo.jpg" title="logo" id="logo"/>
-      <h1>My Website</h1>
+      <img src="/images/logo.png" title="logo" class = "logo"/>
+      <h1>Online Library</h1>
     </header>
     <nav>
       <a href="home.html">Home</a>
-      <a href="page1.html">First Page</a>
-      <a href="page2.html">Second Page</a>
-      <a href="page3.html">Third Page</a>
+      <!-- <a href="trending.html">Trending</a> -->
+      <a href="books.html">Books</a>
+      <a href="authors.html">Authors</a>
+      <a href="collections.html">Collections</a>
+      <a href="contribute.html">Contribute</a>
       <a href="/contactUs.html">Contact Us</a>
-      <input type="search" placeholder="search" name="search"/>
+      <input type="search" placeholder="search by book, author or anything.." name="search"/>
       <button type="button">GO</button>      
       <a href="login.html">Login</a>
       <a href="register.html">Register</a>
@@ -26,23 +28,96 @@
     <div class="row">
       <div class="section-article">
         <section>
-          <h3>Section Objective</h3>
-          <ul>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-          </ul>
+          <h3>Browse by Subject</h3>
+          <div class="scroll-section">
+            <div>
+              <a href="books.html">
+                <div><img src="/images/art.png"/></div>
+                <p class="subject-title">Art</p>
+                <p class="books-number">11,000 Books</p>
+              </a>
+            </div>
+            <div>
+              <a href="books.html">
+                <div><img src="/images/scifi.jpg"/></div>
+                <p class="subject-title">Science Fiction</p>
+                <p class="books-number">10,500 Books</p>
+              </a>
+            </div>
+            <div>
+              <a href="books.html">
+                <div><img src="/images/fantasy.png"/></div>
+                <p class="subject-title">Fantasy</p>
+                <p class="books-number">9,380 Books</p>
+              </a>
+            </div>
+            <div>
+              <a href="books.html">
+                <div><img src="/images/biographies.png"/></div>
+                <p class="subject-title">Biographies</p>
+                <p class="books-number">10,120 Books</p>
+              </a>
+            </div>
+            <div>
+              <a href="books.html">
+                <div><img src="/images/history.png"/></div>
+                <p class="subject-title">History</p>
+                <p class="books-number">8,500 Books</p>
+              </a>
+            </div>
+            <div>
+              <a href="books.html">
+                <div><img src="/images/science.png"/></div>
+                <p class="subject-title">Science</p>
+                <p class="books-number">10,510 Books</p>
+              </a>
+            </div>
+          </div>
         </section>
         <article>
-          <h2>First Article</h2>
-          <img src="/images/section_img.jpg" title="book"/>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam reiciendis nobis excepturi ratione, et, aut saepe, sint dignissimos fugiat vitae earum. Asperiores, labore! Rerum ducimus unde eligendi corrupti at hic dolore, aliquid sed, optio pariatur eaque fugiat consectetur facilis quam officia? Quae aperiam repellendus provident suscipit ipsum harum possimus alias quasi ratione earum qui doloremque, voluptatem veritatis eligendi repudiandae tempore expedita commodi? Velit laboriosam accusantium deserunt assumenda! Repellendus et expedita mollitia quidem? Consectetur ipsum asperiores perspiciatis nemo accusamus! Possimus, commodi alias. Nihil saepe sed fugit ex odio quos, non rerum, suscipit porro culpa a magnam officiis illum mollitia obcaecati tempora repellendus blanditiis recusandae voluptatem, quaerat necessitatibus. Quam, sequi amet dolor id modi, voluptas repellendus nesciunt enim velit neque reiciendis exercitationem alias ex corrupti quisquam eius natus at praesentium quia impedit laborum deleniti. Ex veniam atque rerum? Aliquam repellat earum tenetur corporis, sapiente necessitatibus possimus, voluptates nulla odit amet animi voluptate error impedit, eligendi sint reprehenderit repellendus minus exercitationem sunt libero? Eum ea neque ducimus debitis suscipit excepturi non, corrupti ipsa, rerum quidem architecto, numquam corporis ullam porro alias totam cum praesentium est quam veniam voluptas eaque sunt! Porro, debitis deserunt asperiores provident eius inventore? Quibusdam, error suscipit. Quam, aperiam ipsa?</p>
+          <h2>Trending Books</h2>
+          <div class="books">
+            <div>
+              <a>
+                <div><img class="book-cover" href="book.html" src="https://m.media-amazon.com/images/I/41xShlnTZTL._AC_SY780_.jpg"/></div>
+              </a>
+              <div><button type="button" class="book-status available">Borrow</button></div>
+          </div>
+          <div>
+            <a>
+              <div><img class="book-cover" href="book.html" src="https://m.media-amazon.com/images/I/41T5H8u7fUL._AC_SY780_.jpg"/></div>
+            </a>
+            <div><button type="button" class="book-status not-available">Join Waiting list</button></div>
+        </div>
+        <div>
+          <a>
+            <div><img class="book-cover" href="book.html" src="https://m.media-amazon.com/images/I/51j631YG0IL._AC_SY780_.jpg"/></div>
+          </a>
+          <div><button type="button" class="book-status available">Borrow</button></div>
+        </div>
+        <div>
+          <a>
+            <div><img class="book-cover" href="book.html" src="https://m.media-amazon.com/images/I/61y04z8SKEL._AC_SY780_.jpg"/></div>
+          </a>
+          <div><button type="button" class="book-status available">Borrow</button></div>
+      </div>
+      <div>
+        <a>
+          <div><img class="book-cover" href="book.html" src="https://m.media-amazon.com/images/I/91LUbAcpACL.jpg"/></div>
+        </a>
+        <div><button type="button" class="book-status not-available">Join Waiting list</button></div>
+      </div>
+        </div>
        </article>
        <article>
-          <h2>Second Article</h2>
-          <img src="/images/section_img.jpg" title="book"/>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur facilis quisquam provident exercitationem excepturi sapiente culpa quasi nisi beatae quia error, iste ullam, fugiat maxime nihil quo ab repudiandae nulla nam rerum sunt accusantium distinctio voluptate odio! Sapiente maiores dolorem fuga repellendus quod blanditiis eius dignissimos aperiam voluptatibus deserunt, voluptatum natus ut error. Fuga minima, nisi quae obcaecati nemo numquam id. Quaerat unde incidunt voluptas. Tempora magni architecto aliquid? Laboriosam iusto illum, ullam recusandae dolor culpa placeat commodi est officia neque earum ipsa labore architecto aperiam praesentium tempora vero alias minus doloremque eligendi aliquid magni ea? Sapiente accusamus nulla quo, dolores asperiores similique, vero rerum, minus et fugiat distinctio ipsam adipisci natus cumque temporibus sed. Eius laborum odio esse debitis doloremque optio, molestias officia hic recusandae ipsum incidunt at quidem nisi corporis praesentium autem temporibus! Totam nisi optio vel praesentium voluptatum molestiae officiis, reiciendis eaque quo ullam enim, dolorem doloremque?</p>       
+         <h2>Books of the Day</h2>
+
+       </article>
+       <article class="about-us">
+         <h2>About the Library</h2>
+         <img src="/images/section_img.jpg" title="book"/>
+         <p id="description">Online Library is an open, editable library catalog, building towards a web page for every book ever published.</p>
+         <p>Just like Wikipedia, you can contribute new information or corrections to the catalog. You can browse by subjects, authors or lists members have created. If you love books, why not help build a library?</p>
        </article>
       </div>
       <aside >
@@ -59,12 +134,34 @@
       </aside>      
     </div>
     <footer>
-      <a title="follow us on facebbok" href="https://www.facebook.com" target="_blank"><img class="social-media" src="/images/facebook.png" alt="Facebook"></a>
-      <a title="follow us on twitter" href="https://www.twitter.com" target="_blank"><img class="social-media" src="/images/instgram.webp" alt="Instgram"></a>
-      <a title="follow us on twitter" href="https://www.twitter.com" target="_blank"><img class="social-media" src="/images/twitter.png" alt="Twitter"></a>
-      <a title="follow us on tiktok" href="https://www.tiktok.com" target="_blank"><img class="social-media" src="/images/tiktok.png" alt="TikTok"></a>
+      <div class="row">
+        <div class="useful-links">
+          <label>Useful Links</label>
+          <ul>
+            <li><a href="link.html">Vision</a></li>
+            <li><a href="link.html">Volunteer</a></li>
+            <li><a href="link.html">Donate</a></li>
+            <li><a href="link.html">Terms of Service</a></li>
+          </ul>
+        </div>
+        <div class="help">
+          <label>Help</label>
+          <ul>
+            <li><a href="link.html">Contact Us</a></li>
+            <li><a href="link.html">Help Center</a></li>
+          </ul>
+        </div>
+        <div class="follow-us">
+          <label>Follow Us</label>                 
+          <br>
+          <a title="follow us on facebbok" href="https://www.facebook.com" target="_blank"><img class="social-media" src="/images/facebook.png" alt="Facebook"></a>
+          <a title="follow us on instgram" href="https://www.instgram.com" target="_blank"><img class="social-media" src="/images/instgram.webp" alt="Instgram"></a>
+          <a title="follow us on twitter" href="https://www.twitter.com" target="_blank"><img class="social-media" src="/images/twitter.png" alt="Twitter"></a>
+          <a title="follow us on tiktok" href="https://www.tiktok.com" target="_blank"><img class="social-media" src="/images/tiktok.png" alt="TikTok"></a>
+        </div>
+      </div>      
       <hr/>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+      <p>Online Library is a non-profit, digital library of Internet sites and other cultural artifacts in digital form.</p>
     </footer>
   </body>
 </html>
