add animation to home page

--- a/index.html
+++ b/index.html
@@ -111,7 +111,38 @@
        </article>
        <article>
          <h2>Books of the Day</h2>
-
+          <div class="books">
+            <div>
+              <a>
+                <div><img class="book-cover" href="book.html" src="https://m.media-amazon.com/images/I/512RYvvDVJL.jpg"/></div>
+              </a>
+              <div><button type="button" class="book-status available">Borrow</button></div>
+          </div>
+          <div>
+            <a>
+              <div><img class="book-cover" href="book.html" src="https://m.media-amazon.com/images/I/51vfuNNWMTS.jpg"/></div>
+            </a>
+            <div><button type="button" class="book-status not-available">Join Waiting list</button></div>
+        </div>
+        <div>
+          <a>
+            <div><img class="book-cover" href="book.html" src="https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781982146702/the-great-gatsby-9781982146702_hr.jpg"/></div>
+          </a>
+          <div><button type="button" class="book-status available">Borrow</button></div>
+        </div>
+        <div>
+          <a>
+            <div><img class="book-cover" href="book.html" src="https://m.media-amazon.com/images/I/91l1EHFs8dL.jpg"/></div>
+          </a>
+          <div><button type="button" class="book-status not-available">Join Waiting list</button></div>
+      </div>
+      <div>
+        <a>
+          <div><img class="book-cover" href="book.html" src="https://m.media-amazon.com/images/I/91Q5dCjc2KL.jpg"/></div>
+        </a>
+        <div><button type="button" class="book-status available">Borrow</button></div>
+      </div>
+        </div>
        </article>
        <article class="about-us">
          <h2>About the Library</h2>
@@ -121,16 +152,13 @@
        </article>
       </div>
       <aside >
-        <h3>Suggested Topics</h3>
-        <h4><a href="">First Topic</a></h4>
-        <p>First topic description Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, voluptate.</p>
-        <img src="/images/section_img.jpg" title="book"/>
-        <h4><a href="">Second Topic</a></h4>
-        <p>Second topic description Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, voluptate.</p>
-        <img src="/images/section_img.jpg" title="book"/>
-        <h4><a href="">Third Topic</a></h4>
-        <p>Third topic description Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, voluptate.</p>
-        <img src="/images/section_img.jpg" title="book"/>
+        <h3>Latest Blog Posts</h3>
+        <h4><a href="blog.html">Search Is Getting Smarter on the Library</a></h4>
+        <p>For too many years now you’ve been limited in how books can be found from Open Library’s extensive catalogue. Since the dawn of its existence, Open Library’s goal has been to make one web page for every book ever published. And to make those books accessible...<a href="blog.html">More.</a></p>
+        <h4><a href="blog.html"></a>2022 Book Review</a></h4>
+        <p>In addition to the yearly community celebration, we’ve tried to make end-of-year review posts to give the community transparency into our victories, changes, and planning...<a href="blog.html">More.</a></p>
+        <h4><a href="blog.html">Internet Archive Summer of Design 2022</a></h4>
+        <p>When I first joined the Online Library team, the team was facing three design challenges...<a href="blog.html">More.</a></p>
       </aside>      
     </div>
     <footer>
